--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -261,4 +261,5 @@
   <string name="close_menu">Close menu</string>
   <string name="skip_duplicate_articles">Skip duplicate articles</string>
   <string name="skip_duplicate_articles_desc">Articles with links or titles identical to existing articles are ignored</string>
+    <string name="touch_to_play_audio">Touch to play audio</string>
 </resources>
