Updated Vietnamese translation using Weblate
Currently translated at 100.0% (249 of 249 strings)

Co-authored-by: ngocanhtve <ngocanh.tve@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/vi/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -248,4 +248,5 @@
     <string name="close_menu">Đóng trình đơn</string>
     <string name="export_saved_articles">Xuất các bài viết đã lưu</string>
     <string name="skip_duplicate_articles">Bỏ qua bài viết trùng lặp</string>
+    <string name="touch_to_play_audio">Chạm để phát âm thanh</string>
 </resources>
