--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -248,4 +248,6 @@
     <string name="skip_duplicate_articles">Пропускане на дублирани статии</string>
     <string name="skip_duplicate_articles_desc">Статии с връзки или заглавия идентични на съществуващите се игнорират</string>
     <string name="feed_item_style_compact_card">Компактна карта</string>
+    <string name="show_title_unread_count">Показване на броя на непрочетените статии в заглавието</string>
+    <string name="touch_to_play_audio">Докосни, за възпроизвеждане на аудио</string>
 </resources>
