--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -249,4 +249,5 @@
     <string name="skip_duplicate_articles_desc">Články s odkazy nebo názvy shodnými s existujícími články jsou ignorovány</string>
     <string name="feed_item_style_compact_card">Kompaktní karty</string>
     <string name="touch_to_play_audio">Dotykem přehrajete zvuk</string>
+    <string name="show_title_unread_count">Zobrazit počet nepřečtených článků v nadpisu</string>
 </resources>
