--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -245,4 +245,7 @@
     <string name="skip_duplicate_articles">ข้ามบทความที่ซ้ำ</string>
     <string name="skip_duplicate_articles_desc">บทความที่มีลิงก์หรือหัวข้อที่มีอยู่แล้วจะถูกเพิกเฉย</string>
     <string name="feed_item_style_compact_card">การ์ดแบบกระทัดรัด</string>
+    <string name="touch_to_play_audio">แตะเพื่อเล่นเสียง</string>
+    <string name="no_body_in_response">ไม่มี body ในข้อมูลที่ตอบกลับมาจากเว็บ</string>
+    <string name="show_title_unread_count">แสดงจำนวนบทความที่ไม่ได้อ่านในหัวเรื่อง</string>
 </resources>
