Updated Arabic translation using Weblate
Currently translated at 91.6% (230 of 251 strings)

Co-authored-by: محمد <tercuman02@vuhuv.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/ar/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -216,4 +216,17 @@
     <string name="read_adjective">مقروء</string>
     <string name="saved_adjective">محفوظ</string>
     <string name="theme_e_ink">ورق إلكتروني</string>
+    <string name="close_menu">اغلق القائمة</string>
+    <string name="one_minute">دقيقة واحدة</string>
+    <string name="zero_minutes">%1$s دقيقة</string>
+    <string name="many_minutes">%1$s دقائق</string>
+    <string name="other_minutes">%1$s دقائق</string>
+    <string name="many_words">%1$s كلمات</string>
+    <string name="few_minutes">%1$s دقائق</string>
+    <string name="zero_words">%1$s كلمة</string>
+    <string name="few_words">%1$s كلمات</string>
+    <string name="other_words">%1$s كلمات</string>
+    <string name="two_minutes">دقيقتان</string>
+    <string name="two_words">كلمتان</string>
+    <string name="one_word">كلمة واحدة</string>
 </resources>
