--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,7 +4,7 @@
     <string name="navigation_drawer_close">Cerrar cajón de navegación</string>
     <string name="action_settings">Ajustes</string>
     <string name="add_feed">Añadir canal</string>
-    <string name="title_activity_edit_feed">Suscribir a un canal</string>
+    <string name="title_activity_edit_feed">Suscribirse a un canal</string>
     <string name="url">URL</string>
     <string name="tag">Etiqueta</string>
     <string name="add_feed_search_hint">URL del canal</string>
@@ -12,7 +12,7 @@
     <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
     <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
     <string name="save">Guardar</string>
-    <string name="empty_feed_top">No hay nada para leer aquí. ¿le gustaría…</string>
+    <string name="empty_feed_top">No hay nada para leer aquí. ¿Le gustaría…</string>
     <string name="empty_feed_open"><annotation style="link">Abrir</annotation> otro canal?</string>
     <string name="empty_feed_add"><annotation style="link">Añadir</annotation> más canales?</string>
     <string name="search_feed_empty_hint">Escribir la dirección de un canal</string>
@@ -21,7 +21,7 @@
     <string name="mark_all_as_read">Marcar todo como leído</string>
     <string name="edit_feed">Editar canal</string>
     <string name="delete_feed">Borrar canal</string>
-    <string name="show_all_items">Mostrar todos las entradas</string>
+    <string name="show_all_items">Mostrar todas las entradas</string>
     <string name="show_unread_items">Mostrar entradas no leídas</string>
     <string name="new_items_available">Nuevas entradas disponibles</string>
     <string name="view">Ver</string>
