Updated Russian translation using Weblate
Currently translated at 99.6% (250 of 251 strings)

Co-authored-by: George Bogdanoff <georg.b2012@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/ru/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -103,7 +103,7 @@
     <string name="read_article">Читать вслух</string>
     <string name="failed_to_load_text_to_speech">Не удалось синтезировать речь</string>
     <string name="open_in_custom_tab">Встроенный браузер</string>
-    <string name="open_in_webview">Встроенный браузер</string>
+    <string name="open_in_webview">Открыть во встроенном браузере</string>
     <string name="resume_reading">Возобновить чтение</string>
     <string name="pause_reading">Приостановить чтение</string>
     <string name="use_app_default">По умолчанию</string>
