--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -246,7 +246,7 @@
     <string name="export_saved_articles">Экспортировать сохранённые статьи</string>
     <string name="failed_to_export_saved_articles">Не удалось экспортировать созранённые статьи</string>
     <string name="skip_duplicate_articles">Пропускать повторяющиеся статьи</string>
-    <string name="skip_duplicate_articles_desc">Новейшие из статей со схожими заголовками или ссылками будут игнорироваться</string>
+    <string name="skip_duplicate_articles_desc">Статьи с ссылками или заголовками идентичными существующим статьям игнорируются</string>
     <string name="feed_item_style_compact_card">Компактный карточный</string>
     <string name="touch_to_play_audio">Коснитесь для воспроизведения аудио</string>
     <string name="show_title_unread_count">Показывать число непрочитанных статей в заголовке</string>
