--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,7 +113,7 @@
   <string name="sort_newest_first">Newest first</string>
   <string name="sort_oldest_first">Oldest first</string>
   <string name="sort">Sort by</string>
-  <string name="send_bug_report">Send bug-report</string>
+  <string name="send_bug_report">Send bug report</string>
   <string name="no_email_client">Could not open e-mail client</string>
   <string name="touch_to_play_video">Touch to play video</string>
   <string name="javascript">JavaScript</string>
