--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -84,7 +84,7 @@
     <string name="dark_theme_preference_dark">Sötét</string>
     <string name="sort_newest_first">Legújabb elől</string>
     <string name="sort_oldest_first">Legrégebbi elől</string>
-    <string name="sort">Rendezés</string>
+    <string name="sort">Rendezési szempont</string>
     <string name="send_bug_report">Hibajelentés küldése</string>
     <string name="no_email_client">E-mail kliens nem megnyitható</string>
     <string name="javascript">JavaScript</string>
