--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -87,7 +87,7 @@
     <string name="sort_newest_first">El más nuevo primero</string>
     <string name="sort_oldest_first">El más antiguo primero</string>
     <string name="sort">Ordenar por</string>
-    <string name="send_bug_report">Enviar informe de error</string>
+    <string name="send_bug_report">Enviar un informe de error</string>
     <string name="no_email_client">No se puede abrir un cliente de correo</string>
     <string name="touch_to_play_video">Tocar para reproducir vídeo</string>
     <string name="javascript">Javascript</string>
