--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -116,4 +116,15 @@
     <string name="text_to_speech">Teksto al parolado</string>
     <string name="only_available_on_android_n">Disponebla nur ĉe Android %1$s kaj pli</string>
     <string name="stop_reading">Ĉesi legi</string>
+    <string name="sync_status">Sinkroniga stato</string>
+    <string name="export_saved_articles">Eksporti konservitajn artikolojn</string>
+    <string name="description_for_read_aloud">Aŭtomate detektas artikollingvon</string>
+    <string name="block_list">Listo de blokado</string>
+    <string name="add_item">Aldonu eron</string>
+    <string name="dark_theme_preference_dark">Mallumo</string>
+    <string name="block_list_description">Kaŝas artikolojn kun titoloj enhavantaj iun el ĉi tiuj filtriloj. Ekzemplaj filtriloj:</string>
+    <string name="dark_theme_preference_black">Nigra</string>
+    <string name="article_list_settings">Listo de artikoloj</string>
+    <string name="dynamic_theme_use">Dinamikaj koloroj</string>
+    <string name="dark_theme_preference">Preferata malhela temo</string>
 </resources>
