Updated Bulgarian translation using Weblate
Currently translated at 100.0% (251 of 251 strings)

Translated using Weblate (Bulgarian)

Currently translated at 100.0% (205 of 205 strings)

Co-authored-by: trunars <trunars@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/bg/
Translate-URL: https://hosted.weblate.org/projects/feeder/f-droid-and-play-store-metadata/bg/
Translation: Feeder/Android strings
Translation: Feeder/F-Droid and Play Store metadata

--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -135,7 +135,7 @@
     <string name="text_scale">Размер на текста</string>
     <string name="failed_to_parse_rss_feed">Неуспешно анализиране на RSS емисия</string>
     <string name="no_email_client">Не може да се отвори имейл клиент</string>
-    <string name="sync">Синхронизиране</string>
+    <string name="sync">Синхронизирай</string>
     <string name="open_in_default_browser">Браузър по подразбиране</string>
     <string name="block_list">Списък с блокирани</string>
     <string name="export_feeds_to_opml">Изнасяне на емисии в OPML</string>
