--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -273,4 +273,5 @@
   <string name="no_models_were_found">No models were found</string>
   <string name="azure_deployment_id">Azure deployment id</string>
   <string name="list_of_available_models">List of available models</string>
+  <string name="show_message">Show message</string>
 </resources>
