--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -259,4 +259,5 @@
     <string name="unable_to_load_models">Nie udało się załadować modeli</string>
     <string name="no_models_were_found">Nie znaleziono modeli</string>
     <string name="list_of_available_models">Lista dostępnych modeli</string>
+    <string name="show_message">Pokaż wiadomość</string>
 </resources>
