--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -12,7 +12,7 @@
     <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
     <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
     <string name="save">Guardar</string>
-    <string name="empty_feed_top">No hay nada para leer aquí. ¿Le gustaría…</string>
+    <string name="empty_feed_top">No hay nada que leer aquí. Prefieres…</string>
     <string name="empty_feed_open">¿<annotation style="link">Abrir</annotation> otro canal?</string>
     <string name="empty_feed_add">¿<annotation style="link">Añadir</annotation> más fuentes?</string>
     <string name="search_feed_empty_hint">Escribir la dirección de un canal</string>
@@ -260,4 +260,5 @@
     <string name="list_of_available_models">Lista de modelos disponibles</string>
     <string name="azure_deployment_id">Identificación de implementación de Azure</string>
     <string name="show_message">Mostrar mensaje</string>
+    <string name="open_drawer_on_fab">Mostrar feeds después de marcar todo como leído</string>
 </resources>
