Updated Serbian translation using Weblate
Currently translated at 100.0% (262 of 262 strings)

Co-authored-by: eevan78 <ivan.pesic@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/sr/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -260,4 +260,5 @@
     <string name="azure_deployment_id">ИД Azure постављања</string>
     <string name="list_of_available_models">Листа доступних модела</string>
     <string name="show_message">Прикажи поруку</string>
+    <string name="open_drawer_on_fab">Када се све обележи као прочитано, прикажи изворе</string>
 </resources>
