Updated Hungarian translation using Weblate
Currently translated at 100.0% (262 of 262 strings)

Co-authored-by: summoner001 <summoner@vivaldi.net>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/hu/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -260,4 +260,5 @@
     <string name="openai_settings">OpenAI integráció</string>
     <string name="unable_to_load_models">Nem lehet betölteni a modelleket.</string>
     <string name="show_message">Üzenet megjelenítése</string>
+    <string name="open_drawer_on_fab">A hírfolyam megjelenítése miután az összes meg lett jelölve olvasottként</string>
 </resources>
